--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 <i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quasi quibusdam. Adipisci eum maxime fugiat in minima, aliquid sit voluptas aspernatur! Amet mollitia aliquid id molestiae? Enim delectus itaque fuga. </i>
 <em> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta praesentium neque autem nam reprehenderit repudiandae, recusandae hic, animi excepturi temporibus cumque assumenda dolor ex, atque cupiditate suscipit corrupti nisi nemo. </em>
 
+<br/>
+
+<span> hi  </span>
+
+<p>  Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span style="color:red"> Aliquam totam amet dolorum </span> molestias excepturi voluptatum laborum et voluptatem neque, maiores officiis non, aperiam ullam quaerat doloribus perspiciatis explicabo, recusandae impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias, consequuntur quia excepturi possimus sunt animi officia voluptates mollitia dolorum sint beatae veniam quisquam temporibus, ut vitae voluptatibus! Fuga, cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio in ea aliquam corporis blanditiis impedit ad delectus ex velit! Pariatur omnis a iure et suscipit quae! Maxime laudantium odio sapiente! </p>
+
+
+
+
 
 </body>
 
