--- a/index.html
+++ b/index.html
@@ -47,7 +47,42 @@
 <p>  Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span style="color:red"> Aliquam totam amet dolorum </span> molestias excepturi voluptatum laborum et voluptatem neque, maiores officiis non, aperiam ullam quaerat doloribus perspiciatis explicabo, recusandae impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias, consequuntur quia excepturi possimus sunt animi officia voluptates mollitia dolorum sint beatae veniam quisquam temporibus, ut vitae voluptatibus! Fuga, cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio in ea aliquam corporis blanditiis impedit ad delectus ex velit! Pariatur omnis a iure et suscipit quae! Maxime laudantium odio sapiente! </p>
 
 
+<h3>unordered list</h3>
 
+<ul type="circle">
+<li>Mahtab   </li>
+<li>  Sara </li>
+<li>  Zahra </li>
+<li> Roza  </li>
+<li> Fatemeh  </li>
+
+</ul>
+
+<h3> ordered list </h3>
+
+<ol type="a">
+    <li>Atena   </li>
+    <li>Mahtab   </li>
+    <li>  Sara </li>
+    <li>  Zahra </li>
+    <li> Roza  </li>
+    <li> Fatemeh  </li>
+</ol>
+
+
+<ul>
+<li>html tags</li>
+<ul>
+    <li>p</li>
+    <ul>
+        <li>lorem</li>
+        <li>lorem 2</li>
+    </ul>
+    <li>span</li>
+    <li>body</li>
+</ul>
+<li> css styles </li>
+</ul>
 
 
 </body>
