--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 <h1> heading 1 </h1>  
+<h2 id="Section2"> this is an important news</h2>
+
 <h2> heading 2 </h2>  
 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectus, illo incidunt aliquam est, perferendis voluptatibus eius dolores assumenda sequi dolore libero enim itaque qui.  </p>
 
@@ -25,6 +27,7 @@
 
 
 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectus, illo incidunt aliquam est, perferendis voluptatibus eius dolores assumenda sequi dolore libero enim itaque qui.  </p>
+
 
 
 <b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo tempore ea eum distinctio porro delectuLorem ipsum dolor sit</b>
@@ -84,6 +87,17 @@
 <li> css styles </li>
 </ul>
 
+
+<a href="https://zharfa.org/"> zharfa academy</a>
+<br/>
+<a href="/aboutUs.html" target="_blank"> go to about us page </a>
+<br/>
+<a href="mailto:test@gmail.com"> my gamil</a>
+<br/>
+
+<a href="tel:123456789"> my phone number</a>
+<br/>
+<a href="#Section2"> go to an important news </a>
 
 </body>
 
