links and lists

--- a/index.html
+++ b/index.html
@@ -99,6 +99,31 @@
 <br/>
 <a href="#Section2"> go to an important news </a>
 
+<br/>
+
+
+<ul type="square">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>10</li>
+    <li>8</li>
+    <li>6</li>
+</ul>
+
+<ol>
+    <li>C#</li>
+    <li>C++</li>
+    <li>CSS</li>
+    <li>python</li>
+    <li>java</li>
+</ol>
+
+<a href="/contactUs.html">contact us page</a>
+<a href="/view/personal.html">personal page</a>
+<a href="/view/about/about.html">about page</a>
+
 </body>
 
 
